# homework_24.1

./: .dockerignore  .gitignore  Dockerfile  coverage.txt  docker-compose.yaml  pyproject.toml
api/: urls.py
config/: celery.py  settings.py  urls.py
materials/: models.py  paginators.py  permissions.py  services.py  tasks.py  tests.py  validators.py  views.py
materials/migrations/: 0001_initial.py  0002_course_price.py  0003_course_update_date.py
payments/: admin.py  models.py  services.py  tests.py  urls.py  views.py
payments/migrations/: 0001_initial.py  0002_alter_payments_payment_session_id.py  0003_payments_payment_status.py
users/: models.py  paginators.py  serializers.py  tasks.py  tests.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_payments.py  0003_subscribe.py  0004_remove_subscribe_course_remove_subscribe_user_and_more.py
